--- a/styles.css
+++ b/styles.css
@@ -7,84 +7,83 @@ body {
   background-size: cover;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  overflow: hidden;
 }
 
 h1 {
-  font-size: 80pt;
+  font-size: 6vw;
   color: #d79a1f;
   font-weight: bold;
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
-  margin-bottom: 80pt;
+  text-shadow: 1vw 1vw 1vw rgba(0, 0, 0, 0.5);
+  margin-bottom: 20%;
 }
 
 h2 {
-  font-size: 30pt;
+  font-size: 2.7vw;
   color: #ffffff;
-  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
-    2px 2px 0 #000;
+  text-shadow: 0.5vw 0.5vw 0.5vw rgba(0, 0, 0, 0.9);
   position: absolute;
-  top: -95px;
+  top: -40%;
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
 }
 
 .cardContainerShared img {
-  width: 200px;
+  width: 20vh;
   height: auto;
 }
 
 .cardContainerPlayer {
   display: inline-flex;
-  margin-right: 100px;
+  margin-right: 10vh;
   position: relative;
 }
 
 .cardContainerPlayer img {
-  margin-left: 15px;
+  margin-left: 1vh;
 }
 
 .cardContainerDealer {
   display: inline-flex;
-  margin-left: 100px;
+  margin-left: 10vh;
   position: relative;
 }
 
 .cardContainerDealer img {
-  margin-right: 15px;
+  margin-right: 1vh;
 }
 
 .cardCounter {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  font-size: 45pt;
+  font-size: 3.3vw;
   color: white;
-  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
-    2px 2px 0 #000;
+  text-shadow: 0.5vw 0.5vw 0.5vw rgba(0, 0, 0, 0.9);
 }
 
 .cardCounterPlayer {
   display: inline-flex;
-  margin-right: 290px;
+  margin-right: 29vh;
   position: relative;
-  top: -30px;
+  top: -10%;
 }
 .cardCounterDealer {
   display: inline-flex;
-  margin-left: 290px;
+  margin-left: 29vh;
   position: relative;
-  top: -30px;
+  top: -10%;
 }
 
 .moneyCounter {
   background-color: rgba(51, 51, 51, 0.7);
-  border-radius: 30px;
-  padding: 10px;
+  border-radius: 5vw;
+  padding: 0.7vh;
   color: white;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  font-size: 26px;
-  width: 260px;
+  font-size: 1.4vw;
+  width: 27vh;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -94,17 +93,17 @@ h2 {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
   color: #ffffff;
   font-weight: bold;
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
-  font-size: 50pt;
-  margin-top: -60pt;
-  margin-bottom: 25pt;
+  text-shadow: 0.5vw 0.5vw 0.5vw rgba(0, 0, 0, 0.9);
+  font-size: 3.5vw;
+  margin-top: -10vh;
+  margin-bottom: -9vh;
   transition: color 0.3s;
 }
 
 button {
-  font-size: 17pt;
+  font-size: 1vw;
   position: relative;
-  width: 180px;
+  width: 15vh;
   border: none;
   background: rgb(231, 15, 15);
   color: #fff;
